fix footer spacing

--- a/all/scss/components/_footer.scss
+++ b/all/scss/components/_footer.scss
@@ -19,7 +19,7 @@ $footer-height: $default-height-dense !default;
 
 .c-footer {
 	text-align: center;
-	margin: ($footer-spacing * 8) 0 ($footer-spacing * 6);
+	margin: ($footer-spacing * 8) 0 ($footer-spacing * 10);
 
 	&-nav {
 		&-link {
